# deepseek-rust-tutor

./: .env  .gitignore  Cargo.toml  README.md
data/: system_prompt.txt  system_prompt2.txt  system_prompt3.txt  system_prompt_session.txt
deepseek_tutor/: Cargo.toml
deepseek_tutor/data/: system_prompt.txt
deepseek_tutor/src/: controller.rs  main.rs  models.rs  routes.rs  service.rs  session.rs
deepseek_tutor/static/: tutor.css
deepseek_tutor/templates/: tutor.css  tutor.html
src/: main.rs  main2.rs  model_parameters.rs  multiple_tutoring_sessions.rs  personalizing_with_system_prompts.rs  session.rs  system_prompt.rs
src/axum/: Cargo.toml  controller.rs  main.rs  routes.rs
src/axum/src/: controller.rs  main.rs  models.rs  routes.rs  service.rs  session.rs
src/controller/: controller.rs  main.rs  service.rs
src/service_layer/: main.rs  service.rs  session.rs
src/session_manager/: main.rs  session.rs
