[package]
name = "deepseek-rust-tutor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.29.0"
dotenv = "0.15"
tokio = { version = "1.47.1", features = ["full"] }


[[bin]]
name = "deepseek-rust-tutor"
path = "src/main.rs"

[[bin]]
name = "session"
path = "src/session.rs"
