[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
async-openai = "0.28.1"
anyhow = "1.0.98"
dotenv = "0.15.0"
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0.140"
axum = "0.8.3"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
time = "0.3.41"
tower-sessions = { version = "0.14", features = ["signed", "private"] }
tower-http = { version = "0.6.2", features = ["fs"] }
askama = "0.14.0"
rand_core = "0.6.4"
